[project]
name = "actsnclass"
version = "1.3"
authors = [
  { name="Emille E. O. Ishida", email="emilleishida@gmail.com" },
]
description = "Active Learning for Supernova Photometric Classification"
readme = "README.md"
requires-python = ">=3.12.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://cosmostatistics-initiative.org/projects/active-learning-for-supernova-photometric-classification/"
Issues = "https://github.com/COINtoolbox/ActSNClass/issues"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
